@@ -3,6 +3,9 @@
 
 * Added a CLI command and method to delete cloudspaces for a cloud, and added returns for release runs in a cloudspace, and deleting runs in a cloudspace
 * Added a method to retrieve details of a test asset
+* Fixed running team reports from the CLI while providing the --config arg
+* Added methods for assigning and unassigning project roles
+* Added helpful methods for quickly assigning roles for project managers, asset developers, and express users in a project
 
 0.0.12
 ======
